# diri-persola

./: .env  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.git-hooks/: README.md  post-checkout  post-merge  pre-push
.github/: pull_request_template.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: codeql.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  002_expanded_runtime_models.py  003_team_orchestration.py
docker/: Dockerfile  Dockerfile.db
docs/: DB_IMPLEMENTATION.md
persola/: __init__.py  auth.py  cache.py  db.py  db_models.py  db_smoke_test.py  engine.py  logging.py  metrics.py  models.py
persola.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
persola/analysis/: __init__.py  extractor.py  mapper.py  prompts.py
persola/api/: main.py  teams.py
persola/cli/: client.py  main.py  output.py
persola/cli/commands/: agent.py  analyze.py  persona.py  preset.py
persola/db/: __init__.py  config.py  database.py  init.py  models.py  repo.py  schemas.py  settings.py  tables.py
persola/db/repositories/: __init__.py  agent_repository.py  agent_run_repository.py  agent_tool_repository.py  analysis_repository.py  base.py  message_repository.py  persona_repository.py  persona_version_repository.py  session_repository.py  team_repository.py
persola/db/services/: __init__.py  agent_service.py  analytics_service.py  persona_service.py
persola/integrations/: __init__.py  cyrex.py  llm.py
persola/orchestration/: __init__.py  langchain_bridge.py  langgraph_runtime.py  memory.py  parallel.py  personalities.py  redis_memory.py  router.py  state.py  team.py  tool_loader.py  tools.py  workflow.py
persola/services/: team_service.py
persola/ui/: index.html
scripts/: init-db.sh  start.sh
tests/: conftest.py  test_phase6_security.py  test_phase7_observability.py
tests/e2e/: test_workflow.py
tests/integration/: test_agent_api.py  test_persona_api.py  test_session_api.py
tests/unit/: test_analysis.py  test_engine.py  test_models.py  test_orchestration.py  test_team_runtime_v2.py
ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/api/: index.ts
ui/src/components/AgentManager/: AgentCard.css  AgentCard.tsx  AgentForm.css  AgentForm.tsx  AgentList.css  AgentList.tsx  AgentManager.css  AgentManager.tsx  index.ts
ui/src/components/AgentPlayground/: AgentPlayground.css  AgentPlayground.tsx  index.ts
ui/src/components/Analysis/: AnalysisResult.css  AnalysisResult.tsx  AnalysisView.css  AnalysisView.tsx  SampleUpload.css  SampleUpload.tsx  index.ts
ui/src/components/BlendTool/: BlendTool.css  BlendTool.tsx  index.ts
ui/src/components/Conversation/: ConversationView.css  ConversationView.tsx  MessageInput.css  MessageInput.tsx  MessageList.css  MessageList.tsx  SessionSelector.css  SessionSelector.tsx  index.ts
ui/src/components/KnobPanel/: KnobPanel.css  KnobPanel.tsx  index.ts
ui/src/components/PersonaLibrary/: PersonaLibrary.css  PersonaLibrary.tsx  index.ts
ui/src/components/Presets/: Presets.css  Presets.tsx
ui/src/components/TeamWorkbench/: TeamWorkbench.css  TeamWorkbench.tsx  index.ts
ui/src/components/TuningLab/: TuningLab.css  TuningLab.tsx  index.ts
ui/src/types/: index.ts
