[tool.poetry]
name = "deepiri-persola"
version = "0.1.0"
description = "Deepiri Persola - Personalized Agentic Framework"
readme = "README.md"
authors = ["Deepiri Team <team@deepiri.ai>"]
keywords = ["ai", "agents", "personalization", "llm", "cyrex", "helox"]
license = "MIT"
package-mode = false
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
httpx = "^0.26.0"
click = "^8.1.7"
rich = "^13.7.1"
python-multipart = "^0.0.6"
jinja2 = "^3.1.0"
tenacity = "^8.2.0"
slowapi = "^0.1.9"
structlog = "^24.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
greenlet = "^3.0.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "black", "ruff", "mypy"]
openai = ["openai"]
anthropic = ["anthropic"]
ollama = ["langchain-ollama"]

[tool.poetry.scripts]
persola = "persola.cli.main:cli"
persola-server = "persola.api.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
anyio = {extras = ["trio"], version = "^4.0.0"}
aiosqlite = "^0.20.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["persola"]
omit = ["persola/ui/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true